--- a/package.json
+++ b/package.json
@@ -3,7 +3,12 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "scripts": {},
+  "scripts": {
+    "test": "playwright test",
+    "test:headed": "playwright test --headed",
+    "test:ui": "playwright test tests/login-demo.spec.ts --headed",
+    "test:yt": "playwright test tests/youtube-search.spec.ts --headed"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -13,3 +18,4 @@
     "@types/node": "^24.10.1"
   }
 }
+
